@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     29/10/2000
 ## RCS-ID:      $Id$
-## Copyright:   (c) 2000-2010 Mattia Barbon
+## Copyright:   (c) 2000-2013 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -158,6 +158,7 @@ wxPanel *               O_WXOBJECT
 wxDialog *              O_WXOBJECT
 wxControl *             O_WXOBJECT
 wxButton *              O_WXEVTHANDLER
+wxCommandLinkButton *   O_WXEVTHANDLER
 wxStaticText *          O_WXEVTHANDLER
 wxStaticLine *          O_WXEVTHANDLER
 wxTextCtrl *            O_WXOBJECT
