@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     29/10/2000
 ## RCS-ID:      $Id$
-## Copyright:   (c) 2000-2010 Mattia Barbon
+## Copyright:   (c) 2000-2013 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -158,6 +158,7 @@ wxPanel *               O_WXOBJECT
 wxDialog *              O_WXOBJECT
 wxControl *             O_WXOBJECT
 wxButton *              O_WXEVTHANDLER
+wxCommandLinkButton *   O_WXEVTHANDLER
 wxStaticText *          O_WXEVTHANDLER
 wxStaticLine *          O_WXEVTHANDLER
 wxTextCtrl *            O_WXOBJECT
@@ -365,9 +366,11 @@ wxTreeItemId *          O_NON_WXOBJECT_THR
 wxAnimation *           O_WXOBJECT_THR
 wxFontMapper *          O_NON_WXOBJECT
 wxFontEnumerator *      O_NON_WXOBJECT_THR
+wxPlFontEnumerator *    O_NON_WXOBJECT_VXSP_THR
 wxNativeFontInfo *      O_NON_WXOBJECT_THR
 wxFont *                O_WXOBJECT_THR
 wxRegion *              O_WXOBJECT_THR
+wxRegionIterator *      O_WXOBJECT_THR
 wxIcon *                O_WXOBJECT_THR
 wxIconBundle *          O_NON_WXOBJECT
 wxIconLocation *        O_NON_WXOBJECT
